tests/reference/asr-type_info_pointer_01-8fd34f9.stderr
semantic error: `type(type_info)` does not support POINTER attribute
 --> tests/errors/type_info_pointer_01.f90:3:5
  |
3 |     type(type_info), pointer :: t
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
